<resources>

    <!-- App Name -->
    <string name="app_name">TeamGo</string>

    <!-- Edit text labels -->
    <string name="name">Name</string>
    <string name="email_field">Email</string>
    <string name="password_field">Password</string>
    <string name="opposition_field">Club Name</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="cofirmPassword">Cofirm Password</string>

    <!-- Radio Buttons -->
    <string name="manager">Manager</string>
    <string name="player">Player</string>
    <string name="football">Football</string>
    <string name="hurling">Hurling</string>
    <string name="training">Training</string>
    <string name="fixture">Fixture</string>

    <!-- Activity titles -->
    <string name="title_activity_home_page">Home Page</string>
    <string name="title_activity_manager_home">Manager Home</string>
    <string name="title_activity_view_individual_event">Map</string>
    <string name="title_activity_fixture_rating">Fixture Rating</string>

    <!-- Buttons -->
    <string name="login">Login</string>
    <string name="signout">Sign Out</string>
    <string name="forgotPass">Forgot password?</string>
    <string name="resetPass">Reset Password</string>
    <string name="deleteAcc">Delete Account</string>
    <string name="verifyAccount">Verify Account</string>
    <string name="register_btn">Register</string>
    <string name="createTeam">Create Team</string>
    <string name="joinTeam">Join Team</string>
    <string name="viewTeam">View Members</string>
    <string name="createEvent">Create Event</string>
    <string name="pickLocation">Pick Location</string>
    <string name="pickTime">Pick Time</string>
    <string name="pickDate">Pick Date</string>
    <string name="viewEvent">View Event</string>
    <string name="viewAttendees">View Attendees</string>
    <string name="available">Yes</string>
    <string name="notAvailable">No</string>
    <string name="updateAvailibility">Update Availability</string>
    <string name="recordRating">Record Stats</string>
    <string name="saveRating">Save All Players</string>
    <string name="action_settings">Settings</string>
    <string name="changeTeam">Change Team</string>
    <string name="viewRatings">View Ratings</string>
    <string name="pending">Pending</string>
    <string name="responded">Responded</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="bestAttackers">Best Attackers</string>
    <string name="bestDefenders">Best Defenders</string>

    <!-- Short Text Views -->
    <string name="teamType">Team type</string>
    <string name="teamName">Name</string>
    <string name="teamDivision">Division</string>
    <string name="eventLocation">Location</string>
    <string name="eventTime">Time</string>
    <string name="eventDate">Date</string>
    <string name="eventDescription">Description</string>
    <string name="eventOpposition">Opposition</string>
    <string name="loading">Loading…</string>
    <string name="zero">0</string>
    <string name="noData">No Data</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="updatePassword">Update Password</string>
    <string name="going">Going</string>
    <string name="notGoing">Not Going</string>
    <string name="statsSaved">Saved</string>

    <!-- Fix Ratings Text Views -->
    <string name="fixPoint">Points</string>
    <string name="fixGoals">Goals</string>
    <string name="fixWides">Wides</string>
    <string name="fixPossessions">Possessions</string>
    <string name="fixTackles">Tackles</string>
    <string name="fixTurnovers">Turnovers</string>
    <string name="fixYellow">Yellow Cards</string>
    <string name="fixRed">Red Cards</string>
    <string name="fixBlack">Black Cards</string>
    <string name="fixAway">Away</string>
    <string name="fixHome">Home</string>
    <string name="fixTotal">Total Score</string>
    <string name="nothingSelected">[Select a Player…]</string>

    <!-- Long Text Views -->
    <string name="dontHave">No account? Sign up here!</string>
    <string name="haveAccount">Already have an account? Login here!</string>
    <string name="verifyText">You must verify your account to use the app. Press the button below to verify your account now.</string>
    <string name="passResetDetails">Enter in your registered email below and we will send instruction to reset your password</string>
    <string name="joinTeamDetails">Please select the team you wish to join</string>
    <string name="trainingDescription">Please enter a short description of the training e.g Light kick around with shooting afterwards</string>
    <string name="selectTeam">Please select one of the teams below. If there are no teams please select Join Team</string>
    <string name="eventDetails">Please select the event you wish to view. Select either training or fixture</string>
    <string name="confirmAvailabilty">Please confirm availability below (Yes/No)</string>
    <string name="attendeeDetails">Use the tabs to navigate between the lists. Press the button below to begin recording the attendees stats</string>
    <string name="ratingDetails">Please use the drop down menu to select the player you want to record stats for</string>
    <string name="noTeam">You haven\'t joined any teams yet, please select Join Team</string>
    <string name="noGoing">No players have confirmed their availability yet</string>
    <string name="noNotGoing">No players unable to attend </string>
    <string name="noSaved">You haven\'t save any players stats yet</string>
    <string name="clickDirections">Click here for directions</string>
    <string name="viewEventsPlayer">All trainings are displayed here. Use the tabs to view events still pending your response</string>
    <string name="noDataTraining">No trainings to show</string>
    <string name="noDataFixture">No fixtures to show</string>
    <string name="allPlayersSaved">All attendees stats have been recorded for this event</string>
    <string name="selectEvent">Please select the event stats you wish to view</string>
    <string name="noEventsSaved">No events stats have been saved yet</string>
    <string name="playerRating">Please select the player you want to view</string>
    <string name="selectPlayer">Please select the players stats you want to view</string>
    <string name="editInstructions">Click on the item you want to change</string>
    <string name="careerOverView">All-time stats for:</string>
    <string name="totalGames">Number of games played: </string>
    <string name="statsSavedView">Statistics have been recorded you cannot edit event</string>
    <string name="noDataHome">There are no statistics saved yet</string>
    <string name="goalsPoints">Goals : Points</string>
    <string name="divider">:</string>
    <string name="stillToSave">Fixture stats still to save</string>
    <string name="noneToSave">No fixtures stats to save</string>

    <!-- Graph Labels -->
    <string name="defender">Defender Rating</string>
    <string name="attacker">Attacker Rating</string>
    <string name="overall">Overall Rating</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <!-- Dublin Clubs -->
    <string-array name="dublinClubs">
        <item>Adamstown</item>
        <item>AIB GAA</item>
        <item>Ballinteer St.Johns</item>
        <item>Ballyboden St.Endas</item>
        <item>Ballyboughal</item>
        <item>Ballyfermot De La Salle</item>
        <item>Ballymun Kickhams</item>
        <item>Bank of Ireland GAA</item>
        <item>Beann Eadair</item>
        <item>Castleknock</item>
        <item>Civil Service Football</item>
        <item>Clanna Gael Fontenoy</item>
        <item>Clann Mhuire</item>
        <item>Clontarf</item>
        <item>Commericals</item>
        <item>Craobh Chiaráin</item>
        <item>Croí Ró Naofa</item>
        <item>Crumlin</item>
        <item>Cuala</item>
        <item>Erin Go Bragh</item>
        <item>Erins Isle</item>
        <item>Faughs</item>
        <item>Fingallians</item>
        <item>Fingal Ravens</item>
        <item>Garda</item>
        <item>Garristown</item>
        <item>Geraldine Morans</item>
        <item>Good Counsel</item>
        <item>Innisfails</item>
        <item>Kevins</item>
        <item>Kilmacud Crokes</item>
        <item>Liffey Gaels</item>
        <item>Lucan Sarsfields</item>
        <item>Man-O-War</item>
        <item>Na Dubh Ghall</item>
        <item>Na Fianna</item>
        <item>Na Gaeil Óga CLG</item>
        <item>Naomh Barróg</item>
        <item>Naomh Fionnbarra</item>
        <item>Naomh Mearnóg</item>
        <item>Naomh Olaf</item>
        <item>O'Dwyers</item>
        <item>O'Tooles</item>
        <item>Parnells</item>
        <item>Pavee</item>
        <item>Portobello</item>
        <item>Raheny</item>
        <item>Ranelagh Gaels</item>
        <item>Realth Dearg</item>
        <item>Robert Emmets</item>
        <item>Rosmini Gaels</item>
        <item>Round Towers Clondalkin</item>
        <item>Round Towers Lusk</item>
        <item>Samildánach</item>
        <item>Scoil Uí Chonaill</item>
        <item>Setanta</item>
        <item>Shankill</item>
        <item>Skerries Harps</item>
        <item>St. Annes</item>
        <item>Starlights</item>
        <item>Stars of Erin</item>
        <item>St. Brendans</item>
        <item>St. Bridgets</item>
        <item>St. Colmcille</item>
        <item>St. Finians Newcastle</item>
        <item>St. Margarets</item>
        <item>St. Marks</item>
        <item>St. Marys</item>
        <item>St. Maurs</item>
        <item>St. Monicas</item>
        <item>St. Oliver Pluckets Eoghan Ruadh</item>
        <item>St. Patricks Donabate</item>
        <item>St. Patricks Palmerstown</item>
        <item>St. Peregrins</item>
        <item>St. Sylvesters</item>
        <item>St. Vincents</item>
        <item>Templeogue Synge Street</item>
        <item>Thomas Davis</item>
        <item>Trinity Gaels</item>
        <item>Tyrellstown</item>
        <item>UCD GAA</item>
        <item>Wanderers</item>
        <item>Westmanstown Gaels</item>
        <item>Whitehall Colmcille</item>
        <item>Wild Geese</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_directions">Map</string>
    <string name="title_activity_directions_training">Map</string>
</resources>
