<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navP_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/navP_join_team"
            android:icon="@drawable/ic_join_team"
            android:title="@string/joinTeam" />
        <item
            android:id="@+id/navP_view_members"
            android:icon="@drawable/ic_people"
            android:title="@string/viewTeam" />
        <item
            android:id="@+id/navP_view_event"
            android:icon="@drawable/ic_event"
            android:title="@string/viewEvent" />
        <item
            android:id="@+id/navP_view_ratings"
            android:icon="@drawable/ic_view_ratings"
            android:title="@string/viewRatings" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/navP_changeTeam"
                android:icon="@drawable/ic_change"
                android:title="@string/changeTeam" />
            <item
                android:id="@+id/navP_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/navP_signOut"
                android:icon="@drawable/ic_sign_out"
                android:title="@string/signout" />
        </menu>
    </item>

</menu>