<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cianm.testauth.Activity.ViewAttendeesTraining">

    <TextView
        android:id="@+id/attendeeDetailsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/attendeeDetails"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submitStats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="95dp"
        android:layout_marginStart="95dp"
        android:text="@string/recordRating"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/attendeeLinearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/submitStats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attendeeDetailsTextView">

        <TextView
            android:id="@+id/goingTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:text="@string/going"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp" />

        <ListView
            android:id="@+id/goingTrainingLV"
            style="@style/Widget.AppCompat.Light.ListView.DropDown"
            android:layout_width="wrap_content"
            android:layout_height="80dp" />

        <TextView
            android:id="@+id/notGoingTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:text="@string/notGoing"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp" />

        <ListView
            android:id="@+id/notGoingTrainingLV"
            style="@style/Widget.AppCompat.Light.ListView.DropDown"
            android:layout_width="wrap_content"
            android:layout_height="80dp" />

        <TextView
            android:id="@+id/savedTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:text="@string/statsSaved"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp" />

        <ListView
            android:id="@+id/savedTrainingLV"
            style="@style/Widget.AppCompat.Light.ListView.DropDown"
            android:layout_width="wrap_content"
            android:layout_height="80dp">

        </ListView>
    </LinearLayout>

    <TextView
        android:id="@+id/noDataGoingTrainingTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:text="@string/noGoing"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/noDataNotGoingTrainingTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="230dp"
        android:text="@string/noNotGoing"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/noDataSavedTrainingTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="340dp"
        android:text="@string/noSaved"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
